# daw_burp

./: CMakeLists.txt  LICENSE  readme.md  vcpkg.json
cmake/: daw-burpConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/burp/: daw_burp.h  daw_burp_describe.h
include/daw/burp/concepts/: daw_burp_writers.h  daw_container_traits.h  daw_container_traits_fwd.h  daw_nullable_value.h  daw_nullable_value_fwd.h  daw_writable_output.h  daw_writable_output_fwd.h
include/daw/burp/impl/: errors.h  version.h
tests/: CMakeLists.txt
tests/include/: daw_burp_benchmark.h
tests/src/: daw_burp_array_bench.cpp  daw_burp_test.cpp
